syntax = "proto3";

package milvus.proto.index;

option go_package = "github.com/milvus-io/milvus/internal/proto/indexpb";

import "common.proto";
import "internal.proto";
import "milvus.proto";

service IndexNode {
  rpc GetComponentStates(milvus.GetComponentStatesRequest) returns (milvus.ComponentStates) {}
  rpc GetStatisticsChannel(internal.GetStatisticsChannelRequest) returns(milvus.StringResponse){}
  rpc CreateJob(CreateJobRequest) returns (common.Status) {}
  rpc QueryJobs(QueryJobsRequest) returns (QueryJobsResponse) {}
  rpc DropJobs(DropJobsRequest) returns (common.Status) {}
  rpc GetJobStats(GetJobStatsRequest) returns (GetJobStatsResponse) {}

  rpc ShowConfigurations(internal.ShowConfigurationsRequest) returns (internal.ShowConfigurationsResponse){}
  // https://wiki.lfaidata.foundation/display/MIL/MEP+8+--+Add+metrics+for+proxy
  rpc GetMetrics(milvus.GetMetricsRequest) returns (milvus.GetMetricsResponse) {}
}

message StorageConfig {
  string address = 1;
  string access_keyID = 2;
  string secret_access_key = 3;
  bool useSSL = 4;
  string bucket_name = 5;
  string root_path = 6;
  bool useIAM = 7;
  string IAMEndpoint = 8;
  string storage_type = 9;
}

message CreateJobRequest {
  string clusterID = 1;
  string index_file_prefix = 2;
  int64 buildID = 3;
  repeated string data_paths = 4;
  int64 index_version = 5;
  int64 indexID = 6;
  string index_name = 7;
  StorageConfig storage_config = 8;
  repeated common.KeyValuePair index_params = 9;
  repeated common.KeyValuePair type_params = 10;
  int64 num_rows = 11;
}

message QueryJobsRequest {
  string clusterID = 1;
  repeated int64 buildIDs = 2;
}

message IndexTaskInfo {
  int64 buildID = 1;
  common.IndexState state = 2;
  repeated string index_file_keys = 3;
  uint64 serialized_size = 4;
  string fail_reason = 5;
}

message QueryJobsResponse {
  common.Status status = 1;
  string clusterID = 2;
  repeated IndexTaskInfo index_infos = 3;
}

message DropJobsRequest {
  string clusterID = 1;
  repeated int64 buildIDs = 2;
}

message JobInfo {
  int64 num_rows = 1;
  int64 dim = 2;
  int64 start_time = 3;
  int64 end_time = 4;
  repeated common.KeyValuePair index_params = 5;
  int64 podID = 6;
}

message GetJobStatsRequest {
}

message GetJobStatsResponse {
  common.Status status = 1;
  int64 total_job_num = 2;
  int64 in_progress_job_num = 3;
  int64 enqueue_job_num = 4;
  int64 task_slots = 5;
  repeated JobInfo job_infos = 6;
  bool enable_disk = 7;
}
